--- a/fr.tex
+++ b/fr.tex
@@ -67,11 +67,12 @@
 \familyname{CHARDON}
 
 \title{\large
-    Je suis ingénieur jeune diplômé, passionné d'informatique et d'électronique. \newline
-    \medskip  % wtf?
-    Je recherche un stage de fin d'études ou un premier emploi pour mars 2019. \newline
+    Je suis ingénieur jeune diplômé, passionné d'informatique et d'électronique.
+    Je recherche un stage de fin d'études ou un premier emploi pour avril 2019.
+    \newline \newline
     \textbf{Objectif professionnel :} développement logiciel ou conception \newline
-    électronique appliqué au spatial (lanceurs, satellites, stations habitées, etc).
+    électronique appliqué au spatial (lanceurs, satellites, stations \newline
+    habitées, etc).
 }
 \address{PLACEHOLDER_ADDRESS1_FR}{PLACEHOLDER_ADDRESS2_FR}
 \email{PLACEHOLDER_EMAIL}
