--- a/en.tex
+++ b/en.tex
@@ -66,13 +66,13 @@
 \firstname{Adrien}
 \familyname{CHARDON}
 
-% TODO
 \title{\large
     I am a French engineer, freshly graduated, fascinated by computer science and electronics.
-    I am looking for an internship or first permanent job starting in March 2019.
-    \medskip \newline % wtf?
-    \textbf{Professional objective:} software development or electronic design \newline
-    for spatial applications (launchers, satellites, spacecrafts, etc).
+    I am looking for an internship or first permanent job starting in April 2019.
+    I can relocate anywhere on Earth, but Europe is preferred.
+    \newline \newline
+    \textbf{Professional objective:} software development or electronic \newline
+    design for spatial applications (launchers, satellites, spacecrafts, etc).
 }
 \address{PLACEHOLDER_ADDRESS1_EN}{PLACEHOLDER_ADDRESS2_EN}
 \email{PLACEHOLDER_EMAIL}
