Fix URLs and s/spatial/space/

--- a/en.tex
+++ b/en.tex
@@ -72,13 +72,13 @@
     I can relocate anywhere on Earth, but Europe is preferred.
     \newline \newline
     \textbf{Professional objective:} software development or electronic \newline
-    design for spatial applications (launchers, satellites, spacecrafts, etc).
+    design for space applications (launchers, satellites, spacecrafts, etc).
 }
 \address{PLACEHOLDER_ADDRESS1_EN}{PLACEHOLDER_ADDRESS2_EN}
 \email{PLACEHOLDER_EMAIL}
 PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
-\homepage{https://nodraak.fr}
-\social[github]{https://github.com/Nodraak}
+\homepage{nodraak.fr}
+\social[github]{github.com/Nodraak}
 %\extrainfo{PLACEHOLDER_EXTRAINFO_EN} % no birthday if us
 
 %%%%%%%%%%%%%%%%%%%%
@@ -170,7 +170,7 @@ PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
 %%%%%%%%%%%%%%%%%%%%
 
 \cvitem{Personal projects}{Computer science, robotics, model airplanes}
-\cvitem{Spatial simulation}{Kerbal Space Program}
+\cvitem{Space simulation}{Kerbal Space Program}
 
 %%%%%%%%%%%%%%%%%%%%
 % Version
