--- a/fr.tex
+++ b/fr.tex
@@ -77,8 +77,8 @@
 \address{PLACEHOLDER_ADDRESS1_FR}{PLACEHOLDER_ADDRESS2_FR}
 \email{PLACEHOLDER_EMAIL}
 PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
-\homepage{https://nodraak.fr}
-\social[github]{https://github.com/Nodraak}
+\homepage{nodraak.fr}
+\social[github]{github.com/Nodraak}
 \extrainfo{PLACEHOLDER_EXTRAINFO_FR}
 
 %%%%%%%%%%%%%%%%%%%%
