Fix URLs again, ffs

--- a/fr.tex
+++ b/fr.tex
@@ -76,7 +76,7 @@
 \email{PLACEHOLDER_EMAIL}
 PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
 \homepage{nodraak.fr}
-\social[github]{github.com/Nodraak}
+\social[github]{Nodraak}
 \extrainfo{PLACEHOLDER_EXTRAINFO_FR}
 
 %%%%%%%%%%%%%%%%%%%%
