Fix intro (relocation)

--- a/en.tex
+++ b/en.tex
@@ -67,7 +67,7 @@
 \title{\large
     I am a French engineer, freshly graduated, fascinated by computer science and electronics.
     I am looking for an internship or first permanent job starting in April 2019.
-    I can relocate anywhere on Earth, but Europe is preferred.
+    I can relocate anywhere on Earth.
     \newline \newline
     \textbf{Professional objective:} software development or electronic \newline
     design for space applications (launchers, satellites, spacecrafts, etc).
