--- a/en.tex
+++ b/en.tex
@@ -1,4 +1,3 @@
-
 \documentclass[11pt, a4paper, sans]{moderncv}
 
 \usepackage[english]{babel}
@@ -75,9 +74,9 @@
 \address{PLACEHOLDER_ADDRESS1_EN}{PLACEHOLDER_ADDRESS2_EN}
 \email{PLACEHOLDER_EMAIL}
 PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
-\homepage{nodraak.fr}
+\homepage{cv.nodraak.fr/en.pdf}
 \social[github]{Nodraak}
-%\extrainfo{PLACEHOLDER_EXTRAINFO_EN} % no birthday if us
+\extrainfo{PLACEHOLDER_EXTRAINFO_EN} % no birthday if us
 
 %%%%%%%%%%%%%%%%%%%%
 % Content
