--- a/fr.tex
+++ b/fr.tex
@@ -1,4 +1,3 @@
-
 \documentclass[11pt, a4paper, sans]{moderncv}
 
 \usepackage[french]{babel}
@@ -75,9 +74,9 @@
 \address{PLACEHOLDER_ADDRESS1_FR}{PLACEHOLDER_ADDRESS2_FR}
 \email{PLACEHOLDER_EMAIL}
 PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
-\homepage{nodraak.fr}
+\homepage{cv.nodraak.fr/fr.pdf}
 \social[github]{Nodraak}
-\extrainfo{PLACEHOLDER_EXTRAINFO_FR}
+\extrainfo{PLACEHOLDER_EXTRAINFO_FR} % date de naissance
 
 %%%%%%%%%%%%%%%%%%%%
 % Content
