--- a/en.tex
+++ b/en.tex
@@ -64,12 +64,12 @@
 \familyname{CHARDON}
 
 \title{\large
-    I am a French engineer, freshly graduated, fascinated by computer science and electronics.
+    I am a freshly graduated engineer, fascinated by computer science and electronics.
     I am looking for an internship or first permanent job starting in April 2019.
     I can relocate anywhere on Earth.
     \newline \newline
     \textbf{Professional objective:} software development or electronic \newline
-    design for space applications (launchers, satellites, spacecrafts, etc).
+    design for space hardware (launchers, satellites, spacecrafts, etc).
 }
 \address{PLACEHOLDER_ADDRESS1_EN}{PLACEHOLDER_ADDRESS2_EN}
 \email{PLACEHOLDER_EMAIL}
