Add Python in Gali's skills

--- a/en.tex
+++ b/en.tex
@@ -160,7 +160,7 @@ PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
         reuse for the next robots.
         %I designed and programmed the software an autonomous robot for the French Robotic cup, while my teammates worked on the mechanical and electronics parts.
     }
-    {Skills: C++, Git, ARM \si{\micro}controllers, distributed architecture, CAN bus.}
+    {Skills: C++, Python, Git, ARM \si{\micro}controllers, distributed architecture, CAN bus.}
 
 %%%%%%%%%%%%%%%%%%%%
 \mysection{Hobbies}
