--- a/fr.tex
+++ b/fr.tex
@@ -158,7 +158,7 @@ PLACEHOLDER_MOBILE  % if \mobile{} is empty, the phone logo still shows up
         Responsable de la partie informatique avec notamment le développement d'une architecture
         distribuée pour favoriser la réutilisation pour les années futures.
     }
-    {Compétences : C++, Git, \si{\micro}contrôleurs ARM, architecture distribuée, bus CAN.}
+    {Compétences : C++, Python, Git, \si{\micro}contrôleurs ARM, architecture distribuée, bus CAN.}
 
 %%%%%%%%%%%%%%%%%%%%
 \mysection{Passions}
